--- a/html/vendors.html
+++ b/html/vendors.html
@@ -150,16 +150,16 @@
                   </ul>-->
               </li>
               <li>
-                  <a href="..\clientsdetails.php"><i style="font-size:15px" class="fa">&#xf0c0;</i>&nbsp;Client's</a><br>
+                  <a href="..\php\clientsdetails.php"><i style="font-size:15px" class="fa">&#xf0c0;</i>&nbsp;Client's</a><br>
               </li>
               <li>
-                  <a href="..\vendordetails.php"><i style='font-size:15px' class='fas'>&#xf500;</i> &nbsp;Vendor</a><br>
+                  <a href="..\php\vendordetails.php"><i style='font-size:15px' class='fas'>&#xf500;</i> &nbsp;Vendor</a><br>
               </li>
               <li>
-                  <a href="InvoiceDetails.php"><i style="font-size:15px" class="fa">&#xf24a;</i>&nbsp;Invoice</a><br>
+                  <a href="..\php\invoicedetails.php"><i style="font-size:15px" class="fa">&#xf24a;</i>&nbsp;Invoice</a><br>
               </li>
               <li>
-                  <a href="ItemsDeatils.php"><i style="font-size:15px" class="fa">&#xf0e8;</i>&nbsp;Items</a><br>
+                  <a href="..\php\itemsdeatils.php"><i style="font-size:15px" class="fa">&#xf0e8;</i>&nbsp;Items</a><br>
               </li>
           </ul>
             <!--
