--- a/html/clients.html
+++ b/html/clients.html
@@ -57,7 +57,7 @@
                           </ul>-->
                       </li>
                       <li>
-                          <a href="..\clientdetails.php"><i style="font-size:15px" class="fa">&#xf0c0;</i>&nbsp;Client's</a><br>
+                          <a href="..\clientdetails.php" aria-expanded="true"><i style="font-size:15px" class="fa">&#xf0c0;</i>&nbsp;Client's</a><br>
                       </li>
                       <li>
                           <a href="..\vendordetails.php"><i style='font-size:15px' class='fas'>&#xf500;</i> &nbsp;Vendor</a><br>
