--- a/html/items.html
+++ b/html/items.html
@@ -156,7 +156,7 @@
                         <a href="..\php\invoicedetails.php"><i style="font-size:15px" class="fa">&#xf24a;</i>&nbsp;Invoice</a><br>
                     </li>
                     <li>
-                        <a href="..\php\itemdetails.php"><i style="font-size:15px" class="fa">&#xf0e8;</i>&nbsp;Items</a><br>
+                        <a href="..\php\itemdetails.php" aria-expanded="true"><i style="font-size:15px" class="fa">&#xf0e8;</i>&nbsp;Items</a><br>
                     </li>
                 </ul>
                 <!--
