--- a/html/vendors.html
+++ b/html/vendors.html
@@ -159,7 +159,7 @@
                   <a href="..\php\invoicedetails.php"><i style="font-size:15px" class="fa">&#xf24a;</i>&nbsp;Invoice</a><br>
               </li>
               <li>
-                  <a href="..\php\itemsdeatils.php"><i style="font-size:15px" class="fa">&#xf0e8;</i>&nbsp;Items</a><br>
+                  <a href="..\php\itemsdeatils.php" aria-expanded="true"><i style="font-size:15px" class="fa">&#xf0e8;</i>&nbsp;Items</a><br>
               </li>
           </ul>
             <!--
